email-project/force-app/main/default/objects/email_log__x/email_log__x.object-meta.xml
<CustomObject>
    <description>email_log</description>
    <externalDataSource>email_api</externalDataSource>
    <externalName>email_log</externalName>
    <label>email_log</label>
    <pluralLabel>email_log</pluralLabel>
</CustomObject>