email-project/force-app/main/default/objects/email_log__x/fields/customer_id__c.field-meta.xml
<CustomField>
    <fullName>customer_id__c</fullName>
    <description>customer_id</description>
    <externalDeveloperName>customer_id</externalDeveloperName>
    <label>customer_id</label>
    <length>255</length>
    <referenceTargetField>Account.GradwellId__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipName>customer_id</relationshipName>
    <type>IndirectLookup</type>
</CustomField>