email-project/force-app/main/default/objects/email_log__x/fields/has_attachment__c.field-meta.xml
<CustomField>
    <fullName>has_attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>has_attachment</description>
    <externalDeveloperName>has_attachment</externalDeveloperName>
    <label>has_attachment</label>
    <type>Checkbox</type>
</CustomField>